Details
-
Bug
-
Status: Closed
-
Not Evaluated
-
Resolution: Done
-
Qt Creator 4.2.1
-
None
-
Kubuntu 16.10, Qt Creator 4.2.1
Description
I've got quite annoyed with fact that Qt Creator changes active pane before browser opening when user clicks on Get Help Online.
Steps to reproduce:
1. Build project with errors
2. Right-click on error in issues tab and Choose "Get Help Online" in context menu.
What happens:
Qt Creator switches to Help pane and then opens default browser with google results on problem description.
What should happen:
Just open browser with google results. Build pane stays active.
It's annoying as if I choose Get Help Online I'm a priori not going to use built-in help system and want to continue with my code after reading google results.
P.S. Would be great to also let user change search engine used with "Get Help Online". Hardcoding google is quite monopolistic.